--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,8 +5,11 @@
     <div class="py-3 border-top">
         <h2 class="h5 mb-3">Sign in with existing account</h2>
         {{ form_start(form) }}
-        {{ form_row(form.email, {label_attr: {class: 'sr-only'} }) }}
+        {{ form_errors(form.username) }}
+        {{ form_row(form.username, {label_attr: {class: 'sr-only'} }) }}
+        {{ form_errors(form.password) }}
         {{ form_row(form.password, {label_attr: {class: 'sr-only'} }) }}
+        {{ form_errors(form) }}
         <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
         {{ form_end(form) }}
     </div>
