--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="page-header">
-        <h1>Adclassify</h1>
-        <a href="{{ path('admin') }}">Admin</a>
+        <h1>Admin</h1>
+        <a href="{{ path('security_logout') }}">Logout</a>
     </div>
 {% endblock %}
