--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -5,8 +5,8 @@
     <div class="py-3 border-top">
         <h2 class="h5 mb-3">Sign in with existing account</h2>
         {{ form_start(form) }}
-        {{ form_errors(form.username) }}
-        {{ form_row(form.username, {label_attr: {class: 'sr-only'} }) }}
+        {{ form_errors(form.email) }}
+        {{ form_row(form.email, {label_attr: {class: 'sr-only'} }) }}
         {{ form_errors(form.password) }}
         {{ form_row(form.password, {label_attr: {class: 'sr-only'} }) }}
         {{ form_errors(form) }}
@@ -14,34 +14,4 @@
         {{ form_end(form) }}
     </div>
 
-{#<form method="post">#}
-    {#{% if error %}#}
-        {#<div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-    {#{% endif %}#}
-
-    {#<h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>#}
-    {#<label for="inputUsername" class="sr-only">Username</label>#}
-    {#<input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" placeholder="Username" required autofocus>#}
-    {#<label for="inputPassword" class="sr-only">Password</label>#}
-    {#<input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>#}
-
-    {#<input type="hidden" name="_csrf_token"#}
-           {#value="{{ csrf_token('authenticate') }}"#}
-    {#>#}
-
-    {##}
-        {#Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.#}
-        {#See https://symfony.com/doc/current/security/remember_me.html#}
-
-        {#<div class="checkbox mb-3">#}
-            {#<label>#}
-                {#<input type="checkbox" name="_remember_me"> Remember me#}
-            {#</label>#}
-        {#</div>#}
-    {##}
-
-    {#<button class="btn btn-lg btn-primary" type="submit">#}
-        {#Sign in#}
-    {#</button>#}
-{#</form>#}
 {% endblock %}
