--- a/templates/regular_page.html.twig
+++ b/templates/regular_page.html.twig
@@ -7,5 +7,49 @@
 
 {% block body_id %}regular-page{% endblock %}
 {% block body %}
+    {% block navbar %}
+        <div class="container">
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Adshares classify</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                        data-target="#navbarSupportedContent">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="{{ path('classification') }}">Panel</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('classification_status') }}">Status</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                               data-toggle="dropdown">
+                                Admin
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Add user</a>
+                                <a class="dropdown-item" href="#">Users</a>
+                            </div>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                               data-toggle="dropdown">
+                                {{ app.user.fullName }} ({{ app.user.email }})
+                            </a>
+                            <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">Account</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="{{ path('security_logout') }}">Logout</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    {% endblock %}
     {% block content %}{% endblock %}
 {% endblock %}
