--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,3 +8,24 @@ $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Ro
 @import "~bootstrap/scss/bootstrap";
 
 @import "form";
+
+
+.badge-rs {
+    @extend .badge-dark
+}
+
+.badge-rs0 {
+    @extend .badge-success
+}
+
+.badge-rs1 {
+    @extend .badge-primary
+}
+
+.badge-rs2 {
+    @extend .badge-danger
+}
+
+.badge-rs3 {
+    @extend .badge-warning
+}
