--- a/templates/classification/status.html.twig
+++ b/templates/classification/status.html.twig
@@ -31,5 +31,6 @@
                 </tbody>
             </table>
         </div>
+        {% include 'utils/pagination.html.twig' with {'url': 'classification_status'} %}
     </div>
 {% endblock %}
