--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -23,9 +23,9 @@ $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Ro
 }
 
 .badge-rs2 {
-    @extend .badge-danger
+    @extend .badge-warning
 }
 
-.badge-rs3 {
-    @extend .badge-warning
+.badge-rs3, .badge-rs4 {
+    @extend .badge-danger
 }
