--- a/templates/regular_page.html.twig
+++ b/templates/regular_page.html.twig
@@ -23,16 +23,16 @@
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('classification_status') }}">Status</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                               data-toggle="dropdown">
-                                Admin
-                            </a>
-                            <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Add user</a>
-                                <a class="dropdown-item" href="#">Users</a>
-                            </div>
-                        </li>
+{#                        <li class="nav-item dropdown">#}
+{#                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"#}
+{#                               data-toggle="dropdown">#}
+{#                                Admin#}
+{#                            </a>#}
+{#                            <div class="dropdown-menu">#}
+{#                                <a class="dropdown-item" href="#">Add user</a>#}
+{#                                <a class="dropdown-item" href="#">Users</a>#}
+{#                            </div>#}
+{#                        </li>#}
                     </ul>
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item dropdown">
