--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -8,6 +8,7 @@ $font-family-sans-serif: Lato, -apple-system, BlinkMacSystemFont, "Segoe UI", Ro
 @import "~bootstrap/scss/bootstrap";
 
 @import "form";
+@import "panel";
 
 .badge-rs, .badge-rs1 {
     @extend .badge-dark
