--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'regular_page.html.twig' %}
 
+{% block meta %}
+    <meta http-equiv="Content-Security-Policy" content="frame-src blob: data: 'self' 'unsafe-inline'; child-src blob: data: 'self' 'unsafe-inline'">
+{% endblock %}
+
 {% block content %}
     <div class="container" id="panel">
 
@@ -31,10 +35,6 @@
                     {% endif %}
                 </div>
             </nav>
-        {% else %}
-            <div class="alert alert-warning" role="alert">
-                The list of pending campaigns <b>is empty</b>.
-            </div>
         {% endif %}
 
         {% set maxWidth = 700 %}
@@ -42,7 +42,11 @@
 
         {% if not requests %}
             <div class="alert alert-warning mt-2" role="alert">
-                The list of requests <b>is empty</b>.
+                {% if campaign %}
+                    The list of requests <b>is empty</b>.
+                {% else %}
+                    The list of pending campaigns <b>is empty</b>.
+                {% endif %}
             </div>
         {% else %}
             <form id="panel-list" action="{{ path('classification_save') }}" method="post">
@@ -52,7 +56,7 @@
                 </div>
                 <div class=" py-2 px-3 text-right" id="bulk-categories">
                     {% for category in categories %}
-                        {% set isSafe = category.key == 'safe' %}
+                        {% set isSafe = category.key == categorySafe %}
                         <span class="button-checkbox">
                             <button
                                     type="button"
@@ -89,7 +93,8 @@
                         </div>
                         <div class="col-4">
                             {% for category in categories %}
-                                {% set isSafe = category.key == 'safe' %}
+                                {% set isSafe = category.key == categorySafe %}
+                                {% set isChecked = category.key in request.ad.keywords.category|default([]) %}
                                 {% if isSafe %}<br/>{% endif %}
                                 <span class="button-checkbox">
                                 <button type="button"
@@ -99,8 +104,8 @@
                                             title="{{ category.description }}"
                                         {% endif %}
                                 >{{ category.label }}</button>
-                                <input name="requests[{{ request.id }}][{{ category.key }}]" type="checkbox"
-                                       class="collapse"/>
+                                <input name="classifications[{{ request.id }}][{{ category.key }}]" type="checkbox"
+                                       {% if isChecked %}checked{% endif %} class="collapse"/>
                             </span>
                             {% endfor %}
                             <div class="row small mt-2 mr-2 py-1 border rounded">
