--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -130,7 +130,7 @@
                                     </span>
                                 </div>
                                 <div class="col-6 text-right">
-                                    {% set isChecked = request.ad.rejected %}
+                                    {% set isChecked = request.ad.isRejected %}
                                     <span class="button-checkbox category category-reject">
                                         <button type="button"
                                                 class="btn btn-secondary mb-1"
