--- a/templates/classification/status.html.twig
+++ b/templates/classification/status.html.twig
@@ -24,9 +24,16 @@
                         <td><code>{{ request.ad.checksum|hex }}</code></td>
                         <td>
                             {% if request.isPending %}
-                                <a class="btn btn-primary btn-sm" href="{{ path('classification', {'requestId': request.id}) }}">Classify</a>
-                            {% else %}
-                                <a class="small" href="{{ path('classification', {'requestId': request.id}) }}" title="Edit classification">{{ request.ad.keywords|keywords }}</a>
+                                <a class="badge badge-primary"
+                                   href="{{ path('classification', {'requestId': request.id}) }}"><i
+                                            class="fas fa-pen mr-1"></i> Classify</a>
+                            {% elseif request.isProcessed %}
+                                <a class="small" href="{{ path('classification', {'requestId': request.id}) }}"
+                                   title="Edit classification">{{ request.ad.keywords|keywords }}</a>
+                            {% elseif request.isRejected %}
+                                <a class="badge badge-secondary"
+                                   href="{{ path('classification', {'requestId': request.id}) }}"
+                                   title="Edit classification"><i class="fas fa-pen mr-1"></i> Edit</a>
                             {% endif %}
                         </td>
                         <td>
