--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -99,6 +99,8 @@
                                         ">
                                     {% if request.type == 'image' %}
                                         <img src="{{ request|image64(true) }}" border="0" alt=""/>
+                                    {% elseif request.type == 'direct' %}
+                                        <a href="{{ request.ad.content }}" target="_blank" rel="nofollow noreferrer noopener"></a>
                                     {% else %}
                                         <iframe srcdoc="{{ request.ad.content }}" sandbox="allow-scripts" width="100%"
                                                 height="100%"
