--- a/templates/classification/index.html.twig
+++ b/templates/classification/index.html.twig
@@ -93,7 +93,10 @@
                             <div class="banner-box mt-2"
                                  style="max-height: {{ maxHeight }}px; width: {{ maxWidth }}px;">
                                 {% if request.type == 'direct' %}
-                                    <code><a href="{{ request.ad.content }}" target="_blank" rel="nofollow noreferrer noopener">{{ request.ad.content }}</a></code>
+                                    {% set directContent = request.ad.content|split('#', -1)|join('#') %}
+                                    <code><a href="{{ directContent }}" target="_blank" rel="nofollow noreferrer noopener">{{ directContent }}</a></code>
+                                    <br />
+                                    <code>{% if request.ad.size matches '/^\\d+x\\d+$/' %}iframe {% endif %}{{ request.ad.size }}</code>
                                 {% else %}
                                     {% set scale = min(1.0, maxWidth/request.ad.width, maxHeight/request.ad.height) %}
                                     <div style="
